<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ReminderSettingActivity">

    <TextView
        android:id="@+id/release_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release_reminder"
        android:textColor="@color/colorAccent"
        android:textSize="21sp"
        android:layout_marginLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <TextView
        android:id="@+id/release_reminder_desc"
        android:layout_width="258dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/release_reminder_desc"
        android:textSize="15sp"
        android:layout_marginLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/release_reminder"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/btn_release_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:checked="false"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/release_reminder_desc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102" />

    <TextView
        android:id="@+id/daily_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/daily_reminder"
        android:textColor="@color/colorAccent"
        android:textSize="21sp"
        android:layout_marginLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/release_reminder_desc"
        app:layout_constraintVertical_bias="0.021" />

    <TextView
        android:id="@+id/daily_reminder_desc"
        android:layout_width="265dp"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:text="@string/daily_reminder_desc"
        android:textSize="15sp"
        android:layout_marginLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daily_reminder"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/btn_daily_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:checked="false"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/daily_reminder_desc"
        app:layout_constraintTop_toBottomOf="@+id/btn_release_reminder"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>