<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:background="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/tv_item_posterBg"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@color/colorAccent"
            android:tint="#B3353535"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/tv_item_poster"
            android:layout_width="150dp"
            android:layout_height="190dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/ImageViewDescription"
            android:src="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/tv_item_posterBg"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_posterBg"
            app:layout_constraintHorizontal_bias="0.021"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75" />

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="175dp"
            android:layout_marginEnd="16dp"
            android:text="@string/title"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_item_posterBg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_item_posterBg"
            app:layout_constraintVertical_bias="0.110000014" />

        <TextView
            android:id="@+id/detail_rel_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detail_title"
            android:layout_marginStart="175dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/rel_date"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_title" />

        <RatingBar
            android:id="@+id/rating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="0.1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_posterBg"
            android:scaleX="1.1"
            android:scaleY="1.1" />

        <TextView
            android:id="@+id/vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="16dp"
            android:drawablePadding="3dp"
            android:text="Vote Average"
            android:textColor="@color/highlight"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toEndOf="@+id/rating"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_posterBg" />

        <TextView
            android:id="@+id/detail_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="Overview"
            android:textColor="@color/highlight"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vote_average" />

        <TextView
            android:id="@+id/detail_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_item_poster"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_overview"
            tools:text="@string/description" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fav_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="17dp"
            android:backgroundTint="@color/colorPrimary"
            android:src="@drawable/ic_favourite_gold"
            app:borderWidth="0dp"
            app:elevation="6dp"
            app:fabSize="mini"
            app:layout_constraintBottom_toTopOf="@+id/detail_overview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/vote_average"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_posterBg"
            app:layout_constraintVertical_bias="0.52" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fav_remove_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="17dp"
            android:backgroundTint="@color/colorPrimary"
            android:src="@drawable/ic_favourited_gold"
            app:borderWidth="0dp"
            app:elevation="6dp"
            app:fabSize="mini"
            app:layout_constraintBottom_toTopOf="@+id/detail_overview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/vote_average"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_posterBg"
            app:layout_constraintVertical_bias="0.52"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
